--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,37 @@
 ::-webkit-scrollbar {
-    width: 7px;
+  width: 7px;
 }
 ::-webkit-scrollbar-track {
-    background: #cfcfcc;
+  background: #cfcfcc;
 }
 ::-webkit-scrollbar-thumb {
-    background: #a5a5a5;
+  background: #a5a5a5;
 }
 * {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  pointer-events: auto;
+  background: rgba(0, 0, 0, 0.6);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #fff;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 18px !important;
+  font-weight: bold;
+}
+
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  background: rgba(0, 0, 0, 0.8);
 }
